og:imageのパスを修正

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://tsubasa-sris.github.io/">
         <meta name="twitter:card" content="summary_large_image">
-        <meta property="og:image" content="https://github.com/tsubasa-sris/tsubasa-sris.github.io/blob/master/images/share.jpg">
+        <meta property="og:image" content="https://tsubasa-sris.github.io/images/share.jpg">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
